# CSC201

./: README.md  main.py  pyproject.toml
inputs/: input_01.txt  input_02.txt  input_03.txt  input_04.txt  input_05.txt
scripts/: run_demo.py
src/grocery/: __init__.py  cli.py  models.py  simulator.py
tests/: test_end_to_end.py
